Fix all bar footer overflow issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,15 +42,10 @@ h1, h3,h5, h6{
     background-color: rgba(250, 250, 250, 0.8);
 }
 /*------------------------------------------Header*/
-.header-container {
-    max-width: 100vw !important;
-    max-height: 100vh !important;
-    padding: 0;
+header{
+    background-color: #c4d4df;
     margin: 0;
-    background-color: rgba(150, 181, 191, 0.5);
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
+    min-height: 50px;
 }
 .navbar {
     margin-bottom: 0;
@@ -64,13 +59,11 @@ h1, h3,h5, h6{
 /*----------------------------------------Footer*/
 
 footer {
-    background-color: rgba(150, 181, 191, 0.5);
+    background-color: #c4d4df;
     margin: 0;
     min-height: 50px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 }
+
 footer ul {
     width: 100%;
     padding: 0;
@@ -92,7 +85,7 @@ footer ul {
 
 /*------------------------------------Index Body Image*/
 .index-container {
-    height: 100vh;jpg
+    height: 100vh;
     background: url("../images/index_image.png") no-repeat top left fixed;
     background-size: cover;
     display: -webkit-box;
@@ -114,21 +107,22 @@ footer ul {
 /*-------------------------------About Me body */
 .about-container{
     background-color: #ececeb;
+    min-height: 100vh;
 }
 .about-me{
     padding-top: 5px;
 }
 #about-me-intro{
     padding:5px 0px 0px 0px;
-    margin-left: 50px;
-    margin-right: 80px;
+    margin-left: 40px;
+    margin-right: 20px;
     border-color: #b99557;
     border-style: dashed;
     border-width: thin;
     -webkit-box-pack: left;
         -ms-flex-pack: left;
             justify-content: left;
-    font-size: 13px;
+    font-size: 14px;
 }
 #about-me-intro ul{
     padding: 0em 0.5em 0em;
@@ -164,13 +158,13 @@ font-weight: 700;
     padding: 1em 2em 1em 5em;
     position: relative;
     border-left: 1px #b99557 solid;
-    font-size: 11px;
+    font-size: 12px;
     text-align: left;
 }
 .timeline-item p {
     padding: 0;
     margin: 0;
-    font-size: 12px;
+    font-size: 13px;
 }
 .timeline-item:before {
     content: attr(data-dates);
@@ -195,12 +189,14 @@ font-weight: 700;
     background-color: #eae5cc;
 }
 .project-row{
+    min-height: 100vh;
       -webkit-box-pack: center;
           -ms-flex-pack: center;
               justify-content: center;
       -webkit-box-align: center;
           -ms-flex-align: center;
               align-items: center;
+
 }
 .card {
     border-radius: 5%;
@@ -248,8 +244,7 @@ font-weight: 700;
 
 /*------------------------------------Contact Body*/
 .contact-container {
-    height: 100vh;
-    overflow: hidden;
+    /*overflow: hidden;*/
     background: url("../images/contact_image.png") no-repeat top left fixed;
     background-size: cover;
     display: -webkit-box;
@@ -262,6 +257,7 @@ font-weight: 700;
         -ms-flex-pack: center;
             justify-content: center;
     position: relative;
+    min-height: 100vh;
 }
 
 .contact-form {
